--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Two-player Connect Four</title>
-		<meta name="description" content="Play two-player Connect Four online. To win, be the first to form a horizontal, vertical, or diagonal line with four of your discs.">
+		<title>Double Connect Four</title>
+		<meta name="description" content="Play two-player Double Connect Four online. To win, be the first to form a horizontal, vertical, or diagonal line with four of your discs.">
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,84 +19,31 @@
 		</div>
 		<section class="wrapper">
 			<div class="center">
-				<h1 class="title">Connect Four</h1>
+				<h1 class="title">Double Connect Four</h1>
 				<div id="top-text" class="top-text">
-					<h2 class="primary">
+					<h2 class="current-player-wrapper">
 						<span id="prefix">Current player is: </span>
 						<span id="current-player" contenteditable="true">Player 1</span>
 					</h2>
-					<h3 class="secondary">
+					<span id="moves-remaining"></span>
+					<h3 class="other-player-wrapper">
 						<span>Next up is: </span>
 						<span id="other-player" contenteditable="true">Player 2</span>
 					</h3>
-				</h2>
-				<div id="play-again" class="play-again">
-					<a href="#" class="play-again-btn" id="play-again-btn">Play Again</a>
+					<div class="controls">
+						<button id="undo">Take back move</button>
+					</div>
+					<div id="play-again" class="play-again">
+						<button class="play-again-btn" id="play-again-btn">Play Again</button>
+					</div>
 				</div>
 			</div>
-			<table id="board" class="board">
-				<tbody>
-					<tr>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-					</tr>
-					<tr>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-					</tr>
-					<tr>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-					</tr>
-					<tr>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-					</tr>
-					<tr>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-					</tr>
-					<tr>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-						<td><button type="button"></button></td>
-					</tr>
-				</tbody>
-			</table>
-			<a class="code" href="https://github.com/bryanbraun/connect-four">See the code</a>
+			<!-- TODO: Record of moves, other statistics -->
+			<table id="board" class="board"><!-- filled programmatically --></table>
 		</section>
 
-		<script src="js/vars.js"></script>
 		<script src="js/functions.js"></script>
+		<script src="js/vars.js"></script>
 		<script src="js/accessibility.js"></script>
 		<script src="js/main.js"></script>
 	</body>
