--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 					</h3>
 					<div class="controls">
 						<button id="undo">Take back move</button>
+						<button id="ai">Computer Move</button>
 					</div>
+					<div id="engine-status" class="engine-status"></div>
 					<div id="play-again" class="play-again">
 						<button class="play-again-btn" id="play-again-btn">Play Again</button>
 					</div>
