Move engine to Web Worker so UI is responsive when engine is active

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<div id="board"><!-- filled programmatically --></div>
 		</section>
 
+		<script src="js/util.js"></script>
 		<script src="js/functions.js"></script>
 		<script src="js/vars.js"></script>
 		<script src="js/accessibility.js"></script>
